buildscript {
    ext {
        nettyVersion = '4.+'
        slf4jVersion = '1.7.+'
        log4j2Version = '+'
        mavenRepoUrl = 'https://maven.aliyun.com/repository/central'
        publishRepoUrl = 'http://repository.incarcloud.com/content/repositories/snapshots/'

    }
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'java-library'
apply plugin: 'maven-publish'

group 'com.bcd'
version '6.0-SNAPSHOT'

sourceCompatibility = 17

repositories {
    maven { url "${mavenRepoUrl}" }
}

dependencies {
    //集成netty
    api group: 'io.netty', name: 'netty-buffer', version: "${nettyVersion}"

    implementation group: 'org.slf4j', name: 'slf4j-api', version: "${slf4jVersion}"
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2Version}"
}

//生成jar时打包源码
task sourceJar(type: Jar) {
    from sourceSets.main.java.srcDirs
    classifier "sources"
}


//---------------------------------
// 在gradle运行时环境下执行main函数
//---------------------------------
task gb32960_performance(type: JavaExec,description:'gb32960性能测试') {
    classpath sourceSets.main.runtimeClasspath
    main = 'com.bcd.parser.impl.gb32960.Parser_gb32960'
}

//发布到本地MAVEN仓库使用 gradle PublishToMavenLocal
//发布到远程MAVEN仓库使用 gradle publishMavenPublicationToMavenRepository
publishing{
    publications {
        maven(MavenPublication){
            from components.java
            artifact(sourceJar)
        }
    }
    repositories {
        maven{
            url "${publishRepoUrl}"
            credentials {
                username 'deployment'
                password 'deploy123456'
            }
        }
    }
}
